# data-cleaning-env

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  data.csv  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  environment.py
